--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Favour Oghenekowho",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   }
 }
