--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=favour
-PASSWORD=12345
+DATABASE=mongodb+srv://newtonfav:<PASSWORD>@cluster0.6nxvjah.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=mbyNZCS2NyPbAZWz
