--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^5.13.15",
+    "mongoose": "5.13.15",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
     "slugify": "^1.6.5",
