--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Favour Oghenekowho",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
