--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -16,6 +17,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
@@ -48,5 +50,8 @@
     "eslint-plugin-react": "^7.31.8",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.7.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
